# esim_hunter

./: .env.example  .gitignore  README.md  TUTORIAL.md  github_new  github_new.pub  pyproject.toml
src/esim_hunter/: crew.py  main.py
src/esim_hunter/config/: agents.yaml  tasks.yaml
tests/: test_crew.py
