[project]
name = "esim_hunter"
version = "0.1.0"
description = "Autonomous eSIM Deal Hunter using CrewAI"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "crewai[tools]>=0.100.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
esim_hunter = "esim_hunter.main:run"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
